Handle frames sent from peer connection in VideoTrackRecorder

This CL changes the way we handle frames received from peer connection in
VideoTrackRecorder. If we forward those frames directly to GPU process, they
might not be accessible if they aren't backed by STORAGE_SHMEM. We need
to copy those frames into new buffers for these cases.

BUG=644526
TEST=Added new content_browsertest which fails before the changes.

Review-Url: https://codereview.chromium.org/2315073002
Cr-Commit-Position: refs/heads/master@{#416983}

Former-commit-id: 83287174008c789d2e3ed450fa5e2a4236dd5040